For testimonial slider: In CSS, change .js-testimonials-container from position: absolute to relative, prevents page jump on re-load.
For drinks/menu slider:
- In CSS, change .belt-slider from position: aboslute to relative. Since we have 2 belts,
add a new class w/position: absolute.
- In JS, add the new class w/position: absolute to the 1st belt, so both belts appear stacked,
yet second belt is relative, thus won't cause page jumping on reload.

--- a/css/style.sass
+++ b/css/style.sass
@@ -1011,10 +1011,13 @@ textarea:hover::placeholder
         margin: 0
 
       .belt-slider
-        position: absolute
+        position: relative
         display: flex
         justify-content: space-between
         // width: 200%   /* adjust depending on belt-items; set via js*/
+
+      .belt-slider-absolute
+        position: absolute
 
       .js-belt-transition
         transition: transform 300ms ease-in-out
